--- a/style.css
+++ b/style.css
@@ -449,7 +449,7 @@ body {
   font-size: 16px;
   line-height: 1.8;
   margin-top: 0.5em;
-/*  margin-bottom: 1rem;*/
+  margin-bottom: 1rem;
   white-space: normal;
   color: #333;
 }
